plot in R inside slidify

--- a/index.Rmd
+++ b/index.Rmd
@@ -42,29 +42,34 @@ There is a parameter call linear speed $ v_{c}$ that indicates the proper speed 
 This linear speed is tabulated. The materials and values used are:
 
 
-```{r, ,  echo=TRUE}
-material= c("steel (50 kg/m2)", "steel (70 kg/m2)",
-            "steel (90 kg/m2)", "bronze","aluminium","brass")
+```{r, echo=FALSE}
+
+material= c("steel-50", "steel-70",
+            "steel-90", "bronze","aluminium","brass")
 vc=c(30,25,18,40,100,80)
+df <- data.frame(material,vc)
+plot(df, main = "Tabulated lineal speed [m/s]")
 ```
 
 
-### Calculations
+--- .class #id 
+
+
+
+
+## Calculations
 
 If the hole has a diameter $\phi$ the speed in the drill has to be calculated:
 
 
 $$n=\frac{v_{c}·1000}{\pi·\phi}$$
 
-### This is what our shinyapp is doing!!
-
+### This is what our shinyapp is doing!! 
 [Clic to visit our app](https://irocho.shinyapps.io/drill/ "Electronic drill")
 
 
---- .class #id 
 
-
-## How to use our small app
+## How to use it
 
 On the sidebar:
 
@@ -73,16 +78,14 @@ On the sidebar:
 * the diameter of the hole is selected 
 
 
-On the main panel:
-
-the drill speed is obtained
+On the main panel the drill speed is obtained
 
 
 
 --- &radio
 
 
-Just a question as a first test for my pupils to answer:
+Just a question as a first test for students to answer:
 
 
 ## Question 1
